tests/ui/rfcs/rfc-2632-const-trait-impl/assoc-type-const-bound-usage-0.stderr
error[E0277]: the trait bound `Trait::{synthetic#0}: Compat` is not satisfied
  --> $DIR/assoc-type-const-bound-usage-0.rs:13:5
   |
LL |     T::Assoc::func()
   |     ^^^^^^^^ the trait `Compat` is not implemented for `Trait::{synthetic#0}`
   |
note: required by a bound in `Trait::func`
  --> $DIR/assoc-type-const-bound-usage-0.rs:6:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `Trait::func`
...
LL |     fn func() -> i32;
   |        ---- required by a bound in this associated function

error[E0277]: the trait bound `Trait::{synthetic#0}: Compat` is not satisfied
  --> $DIR/assoc-type-const-bound-usage-0.rs:17:5
   |
LL |     <T as Trait>::Assoc::func()
   |     ^^^^^^^^^^^^^^^^^^^ the trait `Compat` is not implemented for `Trait::{synthetic#0}`
   |
note: required by a bound in `Trait::func`
  --> $DIR/assoc-type-const-bound-usage-0.rs:6:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `Trait::func`
...
LL |     fn func() -> i32;
   |        ---- required by a bound in this associated function

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
